[package]
name = "redder"
version = "0.1.0"
authors = ["Sami Kalliomäki"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
monoio = { version = "0.2.3", default_features = false, features = ["macros", "legacy", "bytes"] }
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.4", features = ["derive"] }
byteorder = "1.5.0"
